--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.17MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.42MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-20.33MB/s(Youtube:不良林), server: azhk.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: azhk.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.55MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-4.90MB/s(Youtube:不良林), server: shs.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: shs.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-310.6KB/s(Youtube:不良林), server: usa006.369boy.com, port: 16001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa006.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 45.12.110.8, port: 36109, type: vmess, uuid: d7729364-2135-4af5-aa4f-e1f565a5c23e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 644abf18-e41f-11ec-8512-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
   - {name: 🇩🇪 德国-2.42MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-934.9KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-305.8KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
